# OOP-Homework

./: .flake8  .gitignore  pyproject.toml
src/: category.py  main.py  product.py
tests/: test_category.py  test_main.py  test_product.py
